# flint_gui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Pipeline.xmind  README.md  app.h  main.cpp
.github/workflows/: cmake.yml
assets/icons/: COPYRIGHT.md
docs/: Workflow.md  Workflow.xmind
examples/2d_skeleton/: CMakeLists.txt  main.cpp
examples/2d_skeleton_editor/: CMakeLists.txt  main.cpp
examples/3d_model_viewer/: CMakeLists.txt  main.cpp
examples/button/: CMakeLists.txt  main.cpp
examples/buttons/: CMakeLists.txt  main.cpp
examples/collapse_containers/: CMakeLists.txt  main.cpp
examples/collapsing_containers/: CMakeLists.txt  main.cpp
examples/container_layout/: CMakeLists.txt  main.cpp
examples/ecs/: CMakeLists.txt  main.cpp
examples/ecs_test/: CMakeLists.txt  main.cpp
examples/editor/: CMakeLists.txt  main.cpp
examples/file_selection/: CMakeLists.txt  main.cpp
examples/i18n/: CMakeLists.txt  main.cpp
examples/label/: CMakeLists.txt  main.cpp
examples/label_alignment/: CMakeLists.txt  main.cpp
examples/labels/: CMakeLists.txt  main.cpp
examples/layout/: CMakeLists.txt  main.cpp
examples/multiple_window/: CMakeLists.txt  main.cpp
examples/multiple_windows/: CMakeLists.txt  main.cpp
examples/popup_menu/: CMakeLists.txt  main.cpp
examples/progress_bar/: CMakeLists.txt  main.cpp
examples/progress_bars/: CMakeLists.txt  main.cpp
examples/scrolling/: CMakeLists.txt  main.cpp
examples/tab/: CMakeLists.txt  main.cpp
examples/tabs/: CMakeLists.txt  main.cpp
examples/texture_rect/: CMakeLists.txt  main.cpp
examples/tree/: CMakeLists.txt  main.cpp
res/: viking_room.mtl
src/: STRUCTURE.md  app.cpp  app.h
src/common/: any_callable.h  color.cpp  color.h  geometry.h  io.h  load_file.h  logger.h  macros.h  mat3x3.h  obj_importer.cpp  obj_importer.h  quat.h  timestamp.cpp  timestamp.h  utils.h  vec2.h  vec3.h
src/common/math/: basic.h  mat2x2.h  mat4x4.h  quaternion.h  rect.h  transform2.cpp  transform2.h  unit_vector.cpp  unit_vector.h  vec2.h  vec3.h
src/core/: engine.cpp  engine.h  input_event.cpp  input_event.h  resource_manager.cpp  resource_manager.h  scene_tree.cpp  scene_tree.h
src/ecs/: app.h  camera.cpp  camera.h  data.h  graph.cpp  graph.h  hierarchy.cpp  hierarchy.h  plugin.h  render.cpp  render.h  schedule.h  world.cpp  world.h
src/ecs/core_2d/: mod.cpp  mod.h
src/ecs/graph/: context.h  edge.cpp  edge.h  graph.cpp  graph.h  node.cpp  node.h  slot.h  utils.h
src/ecs/render_graph/: edge.cpp  edge.h  graph.cpp  graph.h  node.cpp  node.h  slot.h  utils.h
src/ecs/render_phase/: draw.h  phase_item.cpp  phase_item.h
src/io/: obj_importer.cpp  obj_importer.h
src/nodes/: file_dialog.cpp  file_dialog.h  node.cpp  node.h  popup.h  scene_tree.cpp  scene_tree.h  sub_window.cpp  sub_window.h  timer.cpp  timer.h  ui_layer.cpp  ui_layer.h  window_proxy.cpp  world.cpp  world.h
src/nodes/2d/: camera2d.h  node2d.cpp  node2d.h  skeleton2d.cpp  sprite2d.cpp
src/nodes/3d/: README.md  camera3d.cpp  camera3d.h  model.cpp  model.h  node3d.cpp  node3d.h  skybox.h
src/nodes/ui/: button.cpp  button.h  check_button.cpp  check_button.h  container.cpp  container.h  label.cpp  label.h  margin_container.h  menu_button.cpp  menu_button.h  node_ui.cpp  node_ui.h  panel.cpp  panel.h  popup_menu.cpp  popup_menu.h  progress_bar.cpp  progress_bar.h  scroll_container.cpp  scroll_container.h  spin_box.cpp  spin_box.h  stack_container.cpp  stack_container.h  tab_container.cpp  tab_container.h  text_edit.cpp  text_edit.h  texture_rect.cpp  texture_rect.h  tree.cpp  tree.h
src/render/: base.h  blit.cpp  blit.h  mesh.cpp  mesh.h  mvp.cpp  mvp.h  mvp_buffer.cpp  mvp_buffer.h  platform.cpp  platform.h  render_server.cpp  render_server.h  render_target.cpp  render_target.h  subview.cpp  subview.h  swap_chain.cpp  swap_chain.h  vertex.cpp  vertex.h  viewport.cpp  window.cpp  window.h
src/rendering/: device.cpp  device.h  material.h  mesh.cpp  mesh.h  mvp_buffer.cpp  mvp_uniform_buffer.cpp  mvp_uniform_buffer.h  platform.cpp  platform.h  render_server.cpp  rendering_server.cpp  rendering_server.h  swap_chain.cpp  swap_chain.h  texture.cpp  texture.h  viewport.cpp  viewport.h
src/resources/: TODO.md  cube_texture.cpp  cube_texture.h  cubemap_texture.cpp  cubemap_texture.h  default_resource.h  font.cpp  font.h  font_mesh.cpp  font_mesh.h  image.cpp  image.h  image_texture.cpp  image_texture.h  material.cpp  material.h  mesh.cpp  mesh.h  opensans_regular_ttf.h  raster_image.cpp  raster_image.h  render_image.cpp  render_image.h  resource.h  resource_manager.cpp  resource_manager.h  style_box.cpp  style_box.h  style_icon.cpp  style_icon.h  surface.cpp  surface.h  texture.cpp  texture.h  theme.h  vector_image.cpp  vector_image.h  vector_texture.cpp  vector_texture.h
src/scene/: README.md  canvas_layer.h  file_dialog.cpp  file_dialog.h  node.cpp  node.h  popup.cpp  popup.h  scene_tree.cpp  scene_tree.h  sub_viewport.cpp  sub_viewport.h  ui_layer.cpp  ui_layer.h  window.cpp  window.h  window_proxy.cpp  window_proxy.h  world.cpp  world.h
src/scene/2d/: README.md  camera2d.cpp  camera2d.h  node2d.cpp  node2d.h  node_2d.cpp  node_2d.h  rigid_body_2d.cpp  rigid_body_2d.h  skeleton2d.cpp  skeleton2d.h  skeleton_2d.cpp  skeleton_2d.h  sprite2d.cpp  (+3 more)
src/scenes/: control.cpp  control.h  node.cpp  node.h  sub_viewport.cpp  sub_viewport.h  texture_rect.cpp  texture_rect.h
src/servers/: README.md  core_server.cpp  core_server.h  debug_server.h  display_server.cpp  display_server.h  engine.cpp  engine.h  input_server.cpp  input_server.h  render_server.cpp  render_server.h  text_server.cpp  text_server.h  translation_server.cpp  translation_server.h  vector_server.cpp  vector_server.h
src/shaders/: blit.frag  blit.vert  blit_vert.spv  compile.bat  compile.ps  compile.ps1  compile_and_convert.ps1  mesh2d.vert  mesh3d_vert.spv  mesh_instance.vert  skeleton_2d.frag  skeleton_2d.vert  skeleton_2d_frag.spv  skeleton_2d_vert.spv  skeleton_mesh_2d.vert  skybox.frag  skybox.vert  skybox_frag.spv  skybox_vert.spv  texture_rect.frag  texture_rect.vert
(+240 files in other folders)
